--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,8 @@
         padding:0;
         overflow: hidden;
         background-color: #1b1a1a;
+        position: relative;
+        height: 100%;
     }
     
     #container video{
@@ -16,14 +18,16 @@
     #container{
         text-align: center;
         top: 50%;
-        -webkit-transform: translateY(50%);
-        transform: translateY(50%);
+        -webkit-transform: translateY(-50%);
+        transform: translateY(-50%);
+        position: absolute;
     }
 
     #container canvas{
         border: 1em solid #1b1a1a;
         max-width: 30%;
     }
+
 
     </style> 
     </head>
